--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
 
     nginx:
-        container_name: nginx
+        container_name: nginx-kinopoisk
         image: nginx:latest
         ports:
             - "8080:80"
@@ -14,7 +14,7 @@ services:
             - php
 
     php:
-        container_name: php
+        container_name: php-kinopoisk
         extra_hosts:
             -   "host.docker.internal:host-gateway"
         build:
@@ -28,7 +28,7 @@ services:
             - ./php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
 
     postgres:
-        container_name: postgres
+        container_name: postgres-kinopoisk
         image: postgres:latest
         volumes:
             - ./postgres:/data/postgres
@@ -38,10 +38,10 @@ services:
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         ports:
-            - 5432:5432
+            - ${POSTGRES_PORT}:${POSTGRES_PORT}
 
     pgadmin:
-        container_name: pgadmin
+        container_name: pgadmin-kinopoisk
         image: dpage/pgadmin4
         environment:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
@@ -50,5 +50,5 @@ services:
         volumes:
             - ./pgadmin:/var/lib/pgadmin
         ports:
-            - "${PGADMIN_PORT:-5050}:80"
+            - ${PGADMIN_PORT}:80
         restart: unless-stopped
