add symfony files

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
+###> symfony/framework-bundle ###
+APP_ENV=dev
+APP_SECRET=0c042a504e5f05194d07164d74875a5b
+###< symfony/framework-bundle ###
+
 # Временная зона
 WORKSPACE_TIMEZONE='Europe/Moscow'
 
@@ -17,5 +22,5 @@ POSTGRES_PORT=5433
 
 PGADMIN_DEFAULT_EMAIL=pgadmin4@pgadmin.org
 PGADMIN_DEFAULT_PASSWORD=admin
-PGADMIN_PORT:5051
+PGADMIN_PORT=5051
 
