Final configuration for dependencies and docker

--- a/app/.env
+++ b/app/.env
@@ -18,3 +18,7 @@
 APP_ENV=dev
 APP_SECRET=a12e1bbe1f277dc127504dd0f88ae264
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+DATABASE_URL="postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
+###< doctrine/doctrine-bundle ###
