--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 services:
 
     nginx:
-        container_name: nginx-kinopoisk
+        container_name: nginx
         image: nginx:latest
         ports:
             - "8080:80"
@@ -14,9 +14,7 @@ services:
             - php
 
     php:
-        container_name: php-kinopoisk
-        extra_hosts:
-            -   "host.docker.internal:host-gateway"
+        container_name: php
         build:
             context: .
             dockerfile: ./php/Dockerfile
@@ -25,10 +23,9 @@ services:
         volumes:
             - ./app:/var/www/project
             - ./php/php.ini:/usr/local/etc/php/conf.d/custom.ini
-            - ./php/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
 
     postgres:
-        container_name: postgres-kinopoisk
+        container_name: postgres
         image: postgres:latest
         volumes:
             - ./postgres:/data/postgres
@@ -38,17 +35,15 @@ services:
             - POSTGRES_USER=${POSTGRES_USER}
             - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
         ports:
-            - ${POSTGRES_PORT}:${POSTGRES_PORT}
+            - ${POSTGRES_PORT:-5432}:5432
 
     pgadmin:
-        container_name: pgadmin-kinopoisk
+        container_name: pgadmin
         image: dpage/pgadmin4
         environment:
             PGADMIN_DEFAULT_EMAIL: ${PGADMIN_DEFAULT_EMAIL:-pgadmin4@pgadmin.org}
             PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_DEFAULT_PASSWORD:-admin}
             PGADMIN_CONFIG_SERVER_MODE: 'False'
-        volumes:
-            - ./pgadmin:/var/lib/pgadmin
         ports:
-            - ${PGADMIN_PORT}:80
+            - "${PGADMIN_PORT:-5050}:80"
         restart: unless-stopped
